force-app/main/default/objects/BMCServiceDesk__CI_Client_Link__c/BMCServiceDesk__CI_Client_Link__c.object-meta.xml
<CustomObject>
    <description>For relationship between CIs and Clients(Users/Contacts/leads)</description>
    <label>CI Client Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Client Link</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>