force-app/main/default/objects/BMCServiceDesk__CI_Client_Link__c/fields/BMCServiceDesk__Business_Service__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Business_Service__c</fullName>
    <formula>BMCServiceDesk__FKBMC_BaseElement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Service</label>
    <type>Text</type>
</CustomField>