force-app/main/default/objects/BMCServiceDesk__CI_Client_Link__c/fields/BMCServiceDesk__CI_Client_Key__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CI_Client_Key__c</fullName>
    <formula>CASESAFEID(BMCServiceDesk__FKBMC_BaseElement__c) &amp; &quot;_&quot; &amp; CASESAFEID(BMCServiceDesk__FKUser__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CI Client Key</label>
    <type>Text</type>
</CustomField>