force-app/main/default/objects/BMCServiceDesk__CI_Client_Link__c/fields/BMCServiceDesk__FKBMC_BaseElement__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Element</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>CI Client Link</relationshipLabel>
    <relationshipName>CI_Client_Link</relationshipName>
    <type>Lookup</type>
</CustomField>