force-app/main/default/objects/BMCServiceDesk__CI_Client_Link__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CI_Client_Link</relationshipName>
    <type>Lookup</type>
</CustomField>